# p4submodule

./: .gitignore  .mise.toml  .pre-commit-config.yaml  LICENSE  README.md  README.md.in  poetry.lock.license  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: push.yml  release.yml
p4_git_submodule/: cli.py  config_file.py  p4_context.py  submodule.py
p4submodule/: cli.py  config_file.py  p4_context.py  submodule.py
scripts/: genreadme.py
tests/: submodule.toml
