[project]
name = "p4submodule"
version = "0.1.0"
description = "A tool for managing git repositories inside of Perforce depots"
authors = [
    { name = "Colden Cullen", email = "<ccullen@secretdimension.com>" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "p4python (>=2024.2.2682690)",
    "pygit2 (>=1.18)",
    "click (>=8.1.8)",
    "tomlkit (>=0.13.2)",
    "paramiko (>=3.5.0)",
    "msgspec (==0.19.0)",
]

[tool.poetry.group.dev.dependencies]
types-paramiko = "^3.5.0.20240928"
types-pygit2 = "^1.15.0.20240822"
pytype = "^2024.10.11"
jinja2 = "^3.1.4"
types-jinja2 = "^2.11.9"

[project.scripts]
p4submodule = "p4submodule.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytype]
inputs = ['.']
